[workspace]
members = [
  "piano-layout",
  "wgpu-jumpstart",
  "ffmpeg-encoder",
  "neothesia",
  "neothesia-ai",
  "neothesia-cli",
  "neothesia-core",
  "neothesia-image",
  "midi-file",
  "midi-io",
  "nuon",
]

default-members = ["neothesia"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
wgpu-jumpstart = { path = "./wgpu-jumpstart" }
neothesia-core = { path = "./neothesia-core" }
neothesia-image = { path = "./neothesia-image" }
midi-file = { path = "./midi-file" }
midi-io = { path = "./midi-io" }
piano-layout = { path = "./piano-layout" }
ffmpeg-encoder = { path = "./ffmpeg-encoder" }
nuon = { path = "./nuon" }

anyhow = "1"
thiserror = "2.0"
log = "0.4"

wgpu = "27"
glyphon = { git = "https://github.com/grovesNL/glyphon.git", rev = "de4b5b8d4e52310be8df56d82a759593920acc04" }

bytes = "1"

bytemuck = { version = "1.5", features = ["derive"] }
env_logger = "0.11"
pollster = "0.4"
async-channel = "2"
euclid = "0.22"

num-traits = "0.2"
unicode-segmentation = "1.12.0"

lilt = "0.8"
winit = "0.30"
dpi = "0.1"
rfd = "0.15"
cpal = "0.16"
fluidlite = { version = "0.2", features = ["builtin"] }
oxisynth = "0.1.0"
embed-resource = "3.0"
midir = "0.10"
objc = "0.2"
ron = "0.11"
serde = "1"
raw-window-handle = "0.6.0"

profiling = "1.0"
puffin = "0.19"
puffin_http = "0.16"

half = "2.2"
cosmic-text = "0.14"
image = { version = "0.25", features = ["png"], default-features = false }
midly = "0.5"

# neothesia-cli deps
ffmpeg = { package = "ffmpeg-sys-next", version = "8", default-features = false }
clap = { version = "4.5.41", default-features = false, features = [
  "color",
  "error-context",
  "help",
  "std",
  "usage",
] }

# neothesia-ai deps
ndarray = "0.16"
rten = "0.22"
rten-tensor = "0.22"
serde_json = "1"
symphonia = { version = "0.5", features = ["mp3"] }
symphonium = { version = "0.6", features = ["mp3"] }
