[workspace]
members = [
  "piano-layout",
  "wgpu-jumpstart",
  "ffmpeg-encoder",
  "neothesia",
  "neothesia-ai",
  "neothesia-cli",
  "neothesia-core",
  "neothesia-image",
  "midi-file",
  "midi-io",
  "nuon",
]

default-members = ["neothesia"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
wgpu-jumpstart = { path = "./wgpu-jumpstart" }
neothesia-core = { path = "./neothesia-core" }
neothesia-image = { path = "./neothesia-image" }
midi-file = { path = "./midi-file" }
midi-io = { path = "./midi-io" }
piano-layout = { path = "./piano-layout" }
ffmpeg-encoder = { path = "./ffmpeg-encoder" }
nuon = { path = "./nuon" }

anyhow = "1"
thiserror = "2.0"
log = "0.4"

wgpu = "30"
glyphon = "0.12"

bytes = "1"

bytemuck = { version = "1.5", features = ["derive"] }
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }
pollster = "0.4"
futures-channel = "0.3"
euclid = "0.22"

lilt = "0.8"
winit = "0.30"
dpi = "0.1"
rfd = "0.17"
cpal = "0.18"
fluidlite = { version = "0.2", features = ["builtin"] }
oxisynth = "0.1.0"
embed-resource = "3.0"
midir = "0.11"
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSBundle", "NSString"] }
ron = "0.12"
serde = "1"
raw-window-handle = "0.6.0"

profiling = "1.0"
puffin = "0.20"
puffin_http = "0.17"

cosmic-text = "0.19"
png = "0.18"
midly = "0.5"

# neothesia-cli deps
ffmpeg = { package = "ffmpeg-sys-next", version = "8", default-features = false }
clap = { version = "4.5.41", default-features = false, features = [
  "color",
  "error-context",
  "help",
  "std",
  "usage",
] }

# neothesia-ai deps
ndarray = "0.17"
rten = "0.24"
rten-tensor = "0.24"
serde_json = "1"
symphonia = { version = "0.6", features = ["mp3"] }
symphonium = { version = "0.11", features = ["mp3"] }
