EXTRA_DIST = BUILD-DEPENDS CHANGELOG graphics extra music
nobase_pkgdata_DATA =	graphics/app_icon.ico \
			graphics/InterfaceButtons.tga \
			graphics/neothesia.xpm \
			graphics/play_KeyHits.tga \
			graphics/play_KeyRail.tga \
			graphics/play_KeysBlack.tga \
			graphics/play_KeysWhite.tga \
			graphics/play_KeyShadow.tga \
			graphics/play_Keys.tga \
			graphics/play_NotesBlackColor.tga \
			graphics/play_NotesBlackShadow.tga \
			graphics/play_NotesWhiteColor.tga \
			graphics/play_NotesWhiteShadow.tga \
			graphics/play_Status2.tga \
			graphics/play_Status.tga \
			graphics/score_RetrySong.tga \
			graphics/stats_text.tga \
			graphics/title_ChooseTracks.tga \
			graphics/title_Exit.tga \
			graphics/title_GameMusicThemes.tga \
			graphics/title_InputBox.tga \
			graphics/title_Logo.tga \
			graphics/title_OutputBox.tga \
			graphics/title_SongBox.tga \
			graphics/trackbox.tga \
			graphics/tracks_BackToTitle.tga \
			graphics/tracks_PlaySong.tga \
			extra/neothesia.desktop \
			music/Popular/Gymnopedie.mid \
			music/Popular/Jonh_Lennon_-_Imagine.mid \
			music/Learning/4_-_Hard/Hark!_The_Herald_Angels_Sing.mid \
			music/Learning/4_-_Hard/In_a_Cabin_in_the_Woods.mid \
			music/Learning/4_-_Hard/Head,_Shoulders,_Knees_and_Toes.mid \
			music/Learning/4_-_Hard/Swing_Low,_Sweet_Chariot.mid \
			music/Learning/4_-_Hard/Cripple_Creek.mid \
			music/Learning/4_-_Hard/The_First_Noel.mid \
			music/Learning/4_-_Hard/The_Yellow_Rose_of_Texas.mid \
			music/Learning/4_-_Hard/Chinese_Folk_Song.mid \
			music/Learning/4_-_Hard/Beethoven_s_Fifth_Symphony.mid \
			music/Learning/4_-_Hard/Ave_Maria.mid \
			music/Learning/4_-_Hard/La_Marseillaise.mid \
			music/Learning/4_-_Hard/Shuha_D-Maryam.mid \
			music/Learning/4_-_Hard/God_Rest_Ye_Merry_Gentlemen.mid \
			music/Learning/4_-_Hard/Aupres_de_ma_Blonde.mid \
			music/Learning/4_-_Hard/O_Canada!.mid \
			music/Learning/4_-_Hard/Brahms__Lullaby.mid \
			music/Learning/4_-_Hard/Lupang_Hinirang.mid \
			music/Learning/4_-_Hard/Moonlight_Sonata.mid \
			music/Learning/4_-_Hard/The_Entertainer.mid \
			music/Learning/4_-_Hard/Oh_Hanukah.mid \
			music/Learning/4_-_Hard/Sonatina_in_G.mid \
			music/Learning/4_-_Hard/Waltzing_Matilda.mid \
			music/Learning/4_-_Hard/Canon_in_D.mid \
			music/Learning/4_-_Hard/Over_the_River_and_Through_the_Woods.mid \
			music/Learning/4_-_Hard/My_Grandfather_s_Clock.mid \
			music/Learning/4_-_Hard/God_Save_the_Queen.mid \
			music/Learning/4_-_Hard/Sevivon,_Sov,_Sov,_Sov.mid \
			music/Learning/3_-_Medium/America.mid \
			music/Learning/3_-_Medium/This_Old_Man.mid \
			music/Learning/3_-_Medium/In_My_Hot_Air_Balloon.mid \
			music/Learning/3_-_Medium/A_Mighty_Fortress_is_Our_God.mid \
			music/Learning/3_-_Medium/Bahay_Kubo_My_Palm_Leaf_Hut.mid \
			music/Learning/3_-_Medium/A_la_Claire_Fontaine.mid \
			music/Learning/3_-_Medium/We_Three_Kings.mid \
			music/Learning/3_-_Medium/Morning_Song.mid \
			music/Learning/3_-_Medium/Old_MacDonald.mid \
			music/Learning/3_-_Medium/Oh_When_the_Saints.mid \
			music/Learning/3_-_Medium/Toccata_and_Fugue_in_D_minor_-_intro.mid \
			music/Learning/3_-_Medium/The_Ghost_Of_Tom.mid \
			music/Learning/3_-_Medium/Au_Clair_de_la_Lune.mid \
			music/Learning/3_-_Medium/My_Bonnie_Lies_Over_the_Ocean_Long.mid \
			music/Learning/3_-_Medium/The_Barn_Cat.mid \
			music/Learning/3_-_Medium/Hanukkah,_Hanukkah.mid \
			music/Learning/3_-_Medium/Eine_kleine_Nachtmusik.mid \
			music/Learning/3_-_Medium/Sur_le_Pont_d_Avignon.mid \
			music/Learning/3_-_Medium/The_Ants_Go_Marching.mid \
			music/Learning/3_-_Medium/Jesu,_Joy_of_Man_s_Desiring.mid \
			music/Learning/3_-_Medium/Mexican_Hat_Dance.mid \
			music/Learning/3_-_Medium/The_Star-Spangled_Banner.mid \
			music/Learning/3_-_Medium/My_Bonnie_Lies_over_the_Ocean.mid \
			music/Learning/3_-_Medium/Ye_Knights_of_the_Round_Table.mid \
			music/Learning/3_-_Medium/Ode_to_Joy.mid \
			music/Learning/3_-_Medium/Silent_Night.mid \
			music/Learning/3_-_Medium/God_Save_the_Queen.mid \
			music/Learning/3_-_Medium/Joy_to_the_World.mid \
			music/Learning/3_-_Medium/Bridal_March.mid \
			music/Learning/2_-_Easy/O_Christmas_Tree.mid \
			music/Learning/2_-_Easy/The_Muffin_Man.mid \
			music/Learning/2_-_Easy/Jolly_Old_Saint_Nicholas.mid \
			music/Learning/2_-_Easy/Oh,_When_the_Saints.mid \
			music/Learning/2_-_Easy/La_Cucaracha.mid \
			music/Learning/2_-_Easy/Skip_to_my_Lou.mid \
			music/Learning/2_-_Easy/Sonatina_Piccolina.mid \
			music/Learning/2_-_Easy/Jana-Gana-Mana.mid \
			music/Learning/2_-_Easy/Beethoven_s_Fifth_Symphony.mid \
			music/Learning/2_-_Easy/Oh_There_Was_Once_a_Little_Ship.mid \
			music/Learning/2_-_Easy/Chopsticks.mid \
			music/Learning/2_-_Easy/How_They_Dance,_Dance.mid \
			music/Learning/2_-_Easy/Can_You_Plant_your_Cabbage_So.mid \
			music/Learning/2_-_Easy/Lightly_Row.mid \
			music/Learning/2_-_Easy/I_ve_Been_Working_on_the_Railroad.mid \
			music/Learning/2_-_Easy/Have_You_Ever_Thought.mid \
			music/Learning/2_-_Easy/Fur_Elise.mid \
			music/Learning/2_-_Easy/Do_Your_Ears_Hang_Low.mid \
			music/Learning/2_-_Easy/Going_Home_-_Dvorak.mid \
			music/Learning/2_-_Easy/Angels_We_Have_Heard_on_High.mid \
			music/Learning/2_-_Easy/The_Wheels_on_the_Bus.mid \
			music/Learning/2_-_Easy/Ode_to_Joy.mid \
			music/Learning/2_-_Easy/America,_the_Beautiful.mid \
			music/Learning/G_Major_Music.txt \
			music/Learning/5_-_Harder/Big_Bad_Goblin_Blues.mid \
			music/Learning/5_-_Harder/Once_a_Canadian_Lad.mid \
			music/Learning/5_-_Harder/March_on_Android_Moon.mid \
			music/Learning/5_-_Harder/Habanera_from_Carmen.mid \
			music/Learning/5_-_Harder/Greensleeves.mid \
			music/Learning/5_-_Harder/Jana-Gana-Mana.mid \
			music/Learning/5_-_Harder/Rock_Solid_Blues.mid \
			music/Learning/5_-_Harder/The_Four_Seasons_-_Autumn.mid \
			music/Learning/5_-_Harder/Carribean_Cruise.mid \
			music/Learning/5_-_Harder/Toreador_from_Carmen.mid \
			music/Learning/5_-_Harder/Moonlight_Sonata.mid \
			music/Learning/5_-_Harder/See_How_the_Night_Arrives.mid \
			music/Learning/5_-_Harder/Amazing_Grace.mid \
			music/Learning/5_-_Harder/Evening_Falls.mid \
			music/Learning/5_-_Harder/Danny_Boy.mid \
			music/Learning/0_-_First_Steps/Aura_Lee_(Love_Me_Tender).mid \
			music/Learning/0_-_First_Steps/Jolly_Old_Saint_Nicholas.mid \
			music/Learning/0_-_First_Steps/The_Monkey_and_the_Mirror.mid \
			music/Learning/0_-_First_Steps/Good_King_Wenceslas.mid \
			music/Learning/0_-_First_Steps/For_Health_and_Strength.mid \
			music/Learning/0_-_First_Steps/Au_Clair_de_la_Lune.mid \
			music/Learning/0_-_First_Steps/Rain,_Rain,_Go_Away.mid \
			music/Learning/0_-_First_Steps/Hot_Cross_Buns.mid \
			music/Learning/0_-_First_Steps/I_Saw_Three_Ships.mid \
			music/Learning/0_-_First_Steps/Mary_Had_a_Little_Lamb.mid \
			music/Learning/0_-_First_Steps/The_Silly_Seal.mid \
			music/Learning/0_-_First_Steps/Mexican_Hat_Dance.mid \
			music/Learning/0_-_First_Steps/Fais_Dodo.mid \
			music/Learning/0_-_First_Steps/Row,_Row,_Row_your_Boat.mid \
			music/Learning/0_-_First_Steps/Away_in_the_Deep_Forest.mid \
			music/Learning/0_-_First_Steps/Chopsticks_(Short_Version).mid \
			music/Learning/0_-_First_Steps/Ode_to_Joy.mid \
			music/Learning/0_-_First_Steps/We_Three_Kings_(Short_Version).mid \
			music/Learning/0_-_First_Steps/A_Tisket,_A_Tasket.mid \
			music/Learning/0_-_First_Steps/Bridal_March.mid \
			music/Learning/0_-_First_Steps/Once_a_Small_Green_Mousie.mid \
			music/Learning/1_-_Very_Easy/Turkey_in_the_Straw.mid \
			music/Learning/1_-_Very_Easy/Go_Tell_It_on_the_Mountain.mid \
			music/Learning/1_-_Very_Easy/We_Wish_You_a_Merry_Christmas.mid \
			music/Learning/1_-_Very_Easy/Oh,_When_the_Saints.mid \
			music/Learning/1_-_Very_Easy/Clementine.mid \
			music/Learning/1_-_Very_Easy/The_First_Noel.mid \
			music/Learning/1_-_Very_Easy/Alouette.mid \
			music/Learning/1_-_Very_Easy/Surprise!.mid \
			music/Learning/1_-_Very_Easy/Old_MacDonald.mid \
			music/Learning/1_-_Very_Easy/Beethoven_s_Fifth_Symphony.mid \
			music/Learning/1_-_Very_Easy/Jingle_Bells.mid \
			music/Learning/1_-_Very_Easy/London_Bridge.mid \
			music/Learning/1_-_Very_Easy/Jesu,_Joy_of_Man_s_Desiring.mid \
			music/Learning/1_-_Very_Easy/Les_Cloches_(The_Bells).mid \
			music/Learning/1_-_Very_Easy/Five_Fat_Turkeys_Are_We.mid \
			music/Learning/1_-_Very_Easy/Amazing_Grace.mid \
			music/Learning/1_-_Very_Easy/Away_in_a_Manger.mid \
			music/Learning/1_-_Very_Easy/We_Gather_Together.mid \
			music/Learning/1_-_Very_Easy/I_Have_a_Little_Dreidle.mid \
			music/Learning/1_-_Very_Easy/The_Chimes.mid \
			music/Learning/1_-_Very_Easy/Ode_to_Joy.mid \
			music/Learning/1_-_Very_Easy/Yankee_Doodle.mid \
			music/Learning/1_-_Very_Easy/My_Palm_Leaf_Hut.mid \
			music/Learning/1_-_Very_Easy/Are_You_Sleeping.mid \
			music/Learning/1_-_Very_Easy/Row,_Row_Row_your_Boat.mid \
			music/Learning/1_-_Very_Easy/Bingo.mid \
			music/Learning/1_-_Very_Easy/Persian_Market_Monkey.mid \
			music/Learning/1_-_Very_Easy/Twinkle,_Twinkle,_Little_Star.mid \
			music/Game_Themes/Zelda_Ocarina_of_Time_-_Zelda_s_Lullaby.mid \
			music/Game_Themes/The_Sims_-_Buying_Theme_1.mid \
			music/Game_Themes/Zelda_Ocarina_of_Time_-_Lost_Woods.mid \
			music/Game_Themes/Dragon_Warrior_-_Town_Theme.mid \
			music/Game_Themes/Sonic_the_Hedgehog_-_Green_Hill_Zone.mid \
			music/Game_Themes/Bubble_Bobble_-_Main_Theme.mid \
			music/Game_Themes/Zelda_A_Link_to_the_Past_-_Overworld_Theme.mid \
			music/Game_Themes/Super_Mario_Bros_-_Underwater.mid \
			music/Game_Themes/Tetris_-_Theme_A.mid \
			music/Game_Themes/Super_Mario_Bros_-_Overworld.mid \
			music/Keyboard_Classics/Rondino-Rameau.mid \
			music/Keyboard_Classics/Clementi_Opus_36_no_1_First_Movement.mid \
			music/Keyboard_Classics/Fur_Elise-Beethoven.mid \
			music/Keyboard_Classics/Minuet_in_F-Leopold_Mozart.mid \
			music/Keyboard_Classics/Aria-Notebook_AM_Bach.mid \
			music/Keyboard_Classics/Sonatina_in_C-Latour.mid \
			music/Keyboard_Classics/Russian_Folksong-Beethoven.mid \
			music/Keyboard_Classics/Minuet_in_G-JS_Bach.mid \
			music/Hannon/Lesson_5.mid \
			music/Hannon/Lesson_8.mid \
			music/Hannon/Lesson_1.mid \
			music/Hannon/Lesson_6.mid \
			music/Hannon/Lesson_7.mid \
			music/Hannon/Lesson_4.mid \
			music/Hannon/Lesson_2.mid \
			music/Hannon/Lesson_3.mid

SUBDIRS = src scripts
ACLOCAL_AMFLAGS = -I m4

ctags-dependencies:
	@$(MAKE) -C src ctags-dependencies

.PHONY:ctags-dependencies

