EXTRA_DIST = BUILD-DEPENDS CHANGELOG graphics extra music
nobase_pkgdata_DATA =	graphics/app_icon.ico \
			graphics/InterfaceButtons.tga \
			graphics/neothesia.xpm \
			graphics/play_KeyHits.tga \
			graphics/play_KeyRail.tga \
			graphics/play_KeysBlack.tga \
			graphics/play_KeysWhite.tga \
			graphics/play_KeyShadow.tga \
			graphics/play_Keys.tga \
			graphics/play_NotesBlackColor.tga \
			graphics/play_NotesBlackShadow.tga \
			graphics/play_NotesWhiteColor.tga \
			graphics/play_NotesWhiteShadow.tga \
			graphics/play_Status2.tga \
			graphics/play_Status.tga \
			graphics/score_RetrySong.tga \
			graphics/stats_text.tga \
			graphics/title_ChooseTracks.tga \
			graphics/title_Exit.tga \
			graphics/title_GameMusicThemes.tga \
			graphics/title_InputBox.tga \
			graphics/title_Logo.tga \
			graphics/title_OutputBox.tga \
			graphics/title_SongBox.tga \
			graphics/trackbox.tga \
			graphics/tracks_BackToTitle.tga \
			graphics/tracks_PlaySong.tga \
			extra/neothesia.desktop \
			music/Popular/Jonh_Lennon_-_Imagine.mid 

SUBDIRS = src scripts
ACLOCAL_AMFLAGS = -I m4

ctags-dependencies:
	@$(MAKE) -C src ctags-dependencies

.PHONY:ctags-dependencies

