[package]
name = "iced_wgpu"
description = "A renderer for iced on top of wgpu"
edition = "2021"

[dependencies]
neothesia-core.workspace = true

image.workspace = true
bytes.workspace = true
bytemuck.workspace = true
guillotiere.workspace = true
log.workspace = true
rustc-hash.workspace = true
wgpu.workspace = true
