[package]
name = "mpeg_encoder"
version = "0.2.1"
authors = ["Sébastien Crozet <developer@crozet.re>"]
edition = "2021"

description = "A simple ffmpeg video encoder."
repository = "https://github.com/sebcrozet/mpeg_encoder"
readme = "README.md"
keywords = [ "encoder", "ffmpeg", "mpeg", "video" ]
license = "BSD-3-Clause"

[features]
default = []
build=["ffmpeg-sys/build"]

[dependencies.ffmpeg-sys]
package = "ffmpeg-sys-next"
version = "6.0.1"
default-features = false
features = [ "avformat", "swscale" ]
