[package]
name = "neothesia-ai"
description = "AI audio to piano transciption interface"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
midly.workspace = true
ndarray.workspace = true
rten.workspace = true
rten-tensor.workspace = true
serde.workspace = true
serde_json.workspace = true
symphonia.workspace = true
symphonium.workspace = true
