[package]
name = "neothesia-cli"
version = "0.1.0"
edition = "2021"

[features]
# Download and compile ffmpeg
build-ffmpeg = ["mpeg_encoder/build"]

[dependencies]
neothesia-core.workspace = true
midi-file.workspace = true
wgpu-jumpstart.workspace = true
env_logger.workspace = true
pollster.workspace = true
mpeg_encoder.workspace = true
