[package]
name = "neothesia-cli"
version = "0.1.0"
edition.workspace = true

[features]
# Download and compile ffmpeg
build-ffmpeg = ["ffmpeg-encoder/build"]

[dependencies]
neothesia-core.workspace = true
midi-file.workspace = true
wgpu-jumpstart.workspace = true
env_logger.workspace = true
pollster.workspace = true
ffmpeg-encoder.workspace = true
oxisynth.workspace = true
clap.workspace = true
