[package]
name = "neothesia-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ron = "0.10"
serde = { version = "1", features = ["serde_derive"] }

log.workspace = true
bytemuck.workspace = true
wgpu.workspace = true
glyphon.workspace = true
wgpu-jumpstart.workspace = true
piano-layout.workspace = true
midi-file.workspace = true
profiling.workspace = true
euclid.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
