[package]
name = "neothesia-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
serde = { workspace = true, features = ["serde_derive"] }
neothesia-image.workspace = true
bytes.workspace = true
ron.workspace = true
log.workspace = true
bytemuck.workspace = true
wgpu.workspace = true
glyphon.workspace = true
wgpu-jumpstart.workspace = true
piano-layout.workspace = true
midi-file.workspace = true
profiling.workspace = true
euclid.workspace = true
dpi.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
# TODO: Port to `objc2`
objc.workspace = true
