[package]
name = "neothesia"
version = "0.1.0"
authors = ["Poly <marynczak.bartlomiej@gmail.com>"]
edition = "2021"
default-run = "neothesia"

[features]
default = ["oxi-synth"]

synth = []
fluid-synth = ["synth", "cpal", "fluidlite", "oxisynth"]
oxi-synth = ["synth", "cpal", "oxisynth"]

[dependencies]
futures = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
fps_ticker = "1.0"
ron = "0.8"
serde = { version = "1.0", features = ["serde_derive"] }
num = "0.4"

wgpu = { workspace = true }
wgpu-jumpstart = { workspace = true }

neothesia-core = { workspace = true }
piano-math = { workspace = true }

winit = { version = "0.29.4", features = ["rwh_05"] }
rfd = "0.12.1"
async-thread = "0.1"

cpal = { version = "0.15.0", optional = true }
fluidlite = { version = "0.2", features = ["builtin"], optional = true }
oxisynth = { version = "0.0.5", optional = true }

midi-file = { workspace = true }
midi-io = { path = "../midi-io" }

iced_style = {git = "https://github.com/iced-rs/iced.git", rev="b4dcf4ecf702a493476791efd95e190e5c1db812"}
iced_graphics = {git = "https://github.com/iced-rs/iced.git", rev="b4dcf4ecf702a493476791efd95e190e5c1db812"}
iced_core = {git = "https://github.com/iced-rs/iced.git", rev="b4dcf4ecf702a493476791efd95e190e5c1db812"}
iced_runtime = {git = "https://github.com/iced-rs/iced.git", rev="b4dcf4ecf702a493476791efd95e190e5c1db812"}
iced_wgpu = { git = "https://github.com/iced-rs/iced.git", rev="b4dcf4ecf702a493476791efd95e190e5c1db812", features = ["image"] }
iced_widget = { git = "https://github.com/iced-rs/iced.git", rev="b4dcf4ecf702a493476791efd95e190e5c1db812", features = ["image"] }

[[bin]]
name = "neothesia"

[target.'cfg(target_os = "windows")'.build-dependencies]
image = "0.24"
embed-resource = "2.4.0"
