[package]
name = "neothesia"
version = "0.1.0"
authors = ["Poly <marynczak.bartlomiej@gmail.com>"]
edition = "2021"
default-run = "neothesia"

[features]
default = ["oxi-synth"]

profiling-on = ["profiling/profile-with-puffin"]
synth = []
fluid-synth = ["synth", "cpal", "fluidlite", "oxisynth"]
oxi-synth = ["synth", "cpal", "oxisynth"]

[dependencies]
futures.workspace = true
log.workspace = true
env_logger.workspace = true
wgpu.workspace = true
wgpu-jumpstart.workspace = true
neothesia-core.workspace = true
neothesia-iced-widgets.workspace = true
piano-math.workspace = true
midi-file.workspace = true
midi-io.workspace = true

iced_graphics.workspace = true
iced_core.workspace = true
iced_runtime.workspace = true
iced_wgpu.workspace = true
iced_widget.workspace = true
iced_renderer = { workspace = true, features = ["wgpu"]}

fps_ticker = "1"
winit = { version = "0.30", features = ["rwh_05"] }
rfd = "0.14"
async-thread = "0.1"

cpal = { version = "0.15", optional = true }
fluidlite = { version = "0.2", features = ["builtin"], optional = true }
oxisynth = { version = "0.0.5", optional = true }

profiling.workspace = true
puffin = "0.19"
puffin_http = "0.16"

[[bin]]
name = "neothesia"

[target.'cfg(target_os = "windows")'.build-dependencies]
image = "0.24"
embed-resource = "2.4"
