[package]
name = "neothesia"
version = "0.3.0"
authors = ["Poly <marynczak.bartlomiej@gmail.com>"]
edition.workspace = true
default-run = "neothesia"

[features]
default = ["oxi-synth"]

profiling-on = ["profiling/profile-with-puffin"]
synth = []
fluid-synth = ["synth", "cpal", "fluidlite", "oxisynth"]
oxi-synth = ["synth", "cpal", "oxisynth"]

[dependencies]
pollster.workspace = true
log.workspace = true
env_logger.workspace = true
wgpu.workspace = true
wgpu-jumpstart.workspace = true
neothesia-core.workspace = true
neothesia-image.workspace = true
midi-file.workspace = true
midi-io.workspace = true
nuon.workspace = true
futures-channel.workspace = true
cosmic-text.workspace = true

bytes.workspace = true
lilt.workspace = true
winit.workspace = true
rfd.workspace = true

cpal = { workspace = true, optional = true }
fluidlite = { workspace = true, optional = true }
oxisynth = { workspace = true, optional = true }

profiling.workspace = true
puffin.workspace = true
puffin_http.workspace = true
piano-layout.workspace = true

[[bin]]
name = "neothesia"

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource.workspace = true
